local/voting-ing.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting
  labels:
    app.kubernetes.io/part-of: docker-voting
    app.kubernetes.io/version: "1.0.0"
spec:
  rules:
  - host: vote.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: vote-http
  - host: result.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: result
          servicePort: result-http
...
